automatically merged revision 965861: When computing percentage height, extend the recurse-to-containing-block -when-size-is-auto quirk to apply to all objects, and not only to replaced elements.

Opera was the last browser to support the same level of strictness as khtml
on this matter, but they finally gave up in 9.6x serie.

So we have to add this CSS violation in quirk mode to remain compatible ;(

BUG: 158592

svn path=/branches/KDE/4.2/kdelibs/; revision=971645